syntax = "proto3";

import "common.proto";

package dalv.client;

option java_package = "org.dalvdb.proto";
option java_outer_classname = "ClientProto";
option java_generate_equals_and_hash = true;


service ClientServer {
  rpc sync (SyncRequest) returns (SyncResponse){}
  rpc watch(WatchRequest) returns (stream WatchResponse){}
}

message SyncRequest {
  string jwt = 1;
  repeated common.Operation ops = 2;
  uint32 lastSnapshotId = 3;
}

message SyncResponse {
  common.RepType syncResponse = 1;
  uint32 snapshotId = 2;
  repeated common.Operation ops = 3;
}

message WatchRequest{
  repeated string keys = 1;
}

message WatchResponse{
  dalv.common.Operation operation = 1;
}